--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="/">
 
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -32,9 +31,9 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>web_presentation</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="web-presentation/manifest.json">
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script src="web-presentation/flutter_bootstrap.js" async></script>
 </body>
 </html>
